--- a/src/web/src/components/App.css
+++ b/src/web/src/components/App.css
@@ -1,6 +1,7 @@
-a{
+a {
     color: rgb(18, 33, 64) !important;
 }
+
 h1 {
     color: white;
     background-color: #1e3567;
@@ -8,23 +9,25 @@ h1 {
     box-shadow: 0 0 44px 1px rgb(0 0 0 / 50%);
     padding: 1rem;
     display: flex;
-    align-items: center;
+    justify-content: space-between;
 }
 
-.logo{
-    height: 4rem;
-    height: 4rem;
+.logo {
+    height: 3rem;
+    height: 3rem;
     margin-right: 1rem;
 }
 
-.btn{
-    background-color:rgb(18, 33, 64)!important;
-    border-color:black!important;;
+.btn {
+    background-color: rgb(18, 33, 64) !important;
+    border-color: black !important;
+    ;
 }
+
 .btn:hover {
     background-color: lightgray !important;
     border-color: black !important;
-    color:black!important;    
+    color: black !important;
 }
 
 .buttons .link {
@@ -41,4 +44,34 @@ h1 {
 
 .button-name {
     padding: 0.5rem;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+
+.page-title {
+    text-decoration: none;
+    display: flex;
+}
+
+.page-title .text {
+    color: white;
+    font-size: 1em;
+    text-align: center;
+}
+
+.user-profile {
+    width: 2.5rem;
+}
+
+.user-profile svg {
+    color: white !important;
 }
