--- a/src/web/src/components/App.css
+++ b/src/web/src/components/App.css
@@ -75,3 +75,9 @@ h1 {
 .user-profile svg {
     color: white !important;
 }
+
+@media only screen and (max-width: 992px) {
+    body{
+        overflow-y: hidden;
+    }
+}
