--- a/src/web/src/components/DeliveryForm.css
+++ b/src/web/src/components/DeliveryForm.css
@@ -1,3 +1,8 @@
+.delivery-form {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
 /* @media only screen and (max-width: 992px) {
     .delivery-form .row {
         margin-left: 0!important;
