--- a/src/web/src/components/CustomerForm.css
+++ b/src/web/src/components/CustomerForm.css
@@ -10,14 +10,14 @@
 
 @media only screen and (max-width: 992px) {
 
-    form {
+    .customer-form {
         margin-bottom: 2rem;
         overflow-y: scroll;
-        height: 55vh;
+        /* height: 55vh; */
     }
 
-    form fieldset {
-        padding-bottom: 1rem;
+    .customer-form fieldset {
+        padding-bottom: 2rem;
     }
 
     .form-switch {
@@ -56,10 +56,13 @@
         border-top: 1px solid rgba(0, 0, 0, .125);
         background-color: white;
         position: fixed;
-        bottom: 0.125rem;
+        /* bottom: 0.125rem; */
+        bottom: 0;
+        left: 0;
+        right: 0;
         text-align: center;
-        right: 1.5rem;
-        left: 1.5rem;
+        /* right: 1.5rem;
+        left: 1.5rem; */
     }
 
     .submit button {
