--- a/src/web/src/components/CustomersPage.css
+++ b/src/web/src/components/CustomersPage.css
@@ -43,7 +43,7 @@
 }
 
 .customers-list {
-    padding-bottom: 2rem;
+    padding-bottom: 4rem;
 }
 
 @media only screen and (min-width: 992px) {
@@ -70,4 +70,17 @@
         margin-top: 1rem;
         margin-left: 1rem;
     } 
+
+    .head-container .cutomers-action{
+        margin:0.5rem!important;        
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+    .head-container .cutomers-action-right{
+        padding-right: 1rem!important;
+    }
+    .head-container .cutomers-action-left{
+        padding-left: 1rem!important;
+    }
 }
