--- a/src/web/src/components/App.css
+++ b/src/web/src/components/App.css
@@ -77,3 +77,38 @@ h1 {
     color: white !important;
 }
 
+
+@media only screen and (max-width: 992px) {
+
+    .bottom-actions {
+        border-top: 1px solid rgba(0, 0, 0, .125);
+        background-color: white;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        text-align: center;
+        padding: 0;
+    }
+
+    .bottom-actions button {
+        width: 100%;
+    }
+    
+    .bottom-actions a {
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width: 993px) {
+    .bottom-actions {        
+        padding-top: 2rem;        
+    }
+    .bottom-actions button {
+        width: 50%;
+    }
+    
+    .bottom-actions a {
+        width: 50%;
+    }
+}
