--- a/src/web/src/components/App.css
+++ b/src/web/src/components/App.css
@@ -1,114 +1,121 @@
 a {
-    color: rgb(18, 33, 64) !important;
+  color: rgb(18, 33, 64) !important;
 }
 
 h1 {
-    color: white;
-    background-color: #1e3567;
-    border-bottom: 1px solid #1e3567;
-    box-shadow: 0 0 44px 1px rgb(0 0 0 / 50%);
-    padding: 1rem;
-    display: flex;
-    justify-content: space-between;
+  color: white;
+  background-color: #1e3567;
+  border-bottom: 1px solid #1e3567;
+  box-shadow: 0 0 44px 1px rgb(0 0 0 / 50%);
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .logo {
-    height: 3rem;
-    height: 3rem;
-    margin-right: 1rem;
+  height: 3rem;
+  height: 3rem;
+  margin-right: 1rem;
 }
 
 .btn {
-    background-color: rgb(18, 33, 64) !important;
-    border-color: black !important;
+  background-color: rgb(18, 33, 64) !important;
+  border-color: black !important;
 }
 
 .btn:hover {
-    background-color: lightgray !important;
-    border-color: black !important;
-    color: black !important;
+  background-color: lightgray !important;
+  border-color: black !important;
+  color: black !important;
 }
 
 .buttons .link {
-    color: white !important;
+  color: white !important;
 }
 
 .buttons .link:hover {
-    color: black !important;
+  color: black !important;
+}
+
+.buttons .btn-secondary {
+  color: rgb(18, 33, 64) !important;
+  background-color: white !important;
+}
+
+.buttons .btn-secondary:hover {
+  background-color: lightgray !important;
 }
 
 .buttons svg {
-    width: 1.5rem;
+  width: 1.5rem;
 }
 
 .button-name {
-    padding: 0.5rem;
+  padding: 0.5rem;
 }
 
 .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
 
 .page-title {
-    text-decoration: none;
-    width: 100%;
-    display: flex;
+  text-decoration: none;
+  width: 100%;
+  display: flex;
 }
 
 .page-title .text {
-    color: white;
-    font-size: 1em;
-    text-align: center;
+  color: white;
+  font-size: 1em;
+  text-align: center;
 }
 
 .user-profile {
-    width: 2.5rem;
+  width: 2.5rem;
 }
 
 .user-profile svg {
-    color: white !important;
+  color: white !important;
 }
 
-
 @media only screen and (max-width: 992px) {
+  .actions-row {
+    border-top: 1px solid rgba(0, 0, 0, 0.125);
+    background-color: white;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    padding: 0;
+  }
 
-    .actions-row {
-        border-top: 1px solid rgba(0, 0, 0, .125);
-        background-color: white;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        text-align: center;
-        padding: 0;
-    }
+  .actions-row button {
+    width: 100%;
+  }
 
-    .actions-row button {
-        width: 100%;
-    }
-    
-    .actions-row a {
-        width: 100%;
-    }
+  .actions-row a {
+    width: 100%;
+  }
 }
 
 @media only screen and (min-width: 993px) {
-    .actions-row {        
-        padding-top: 2rem;        
-        text-align: center;
-    }
-    .actions-row button {
-        width: 10rem;
-    }
-    
-    .actions-row a {
-        width: 10rem;
-    }
+  .actions-row {
+    padding-top: 2rem;
+    text-align: center;
+  }
+  .actions-row button {
+    width: 10rem;
+  }
+
+  .actions-row a {
+    width: 10rem;
+  }
 }
