--- a/src/web/src/components/App.css
+++ b/src/web/src/components/App.css
@@ -104,6 +104,10 @@ h1 {
   .actions-row a {
     width: 100%;
   }
+
+  .content {
+    margin-bottom: 4rem;
+  }
 }
 
 @media only screen and (min-width: 993px) {
