--- a/src/web/src/feature/Customers/View/CustomerPage.css
+++ b/src/web/src/feature/Customers/View/CustomerPage.css
@@ -20,3 +20,12 @@
 .customer-page h2 .buttons {
   margin: 0;
 }
+
+.customer-page .no-delivery {
+  padding-top: 0.5rem;
+}
+
+.customer-page .no-delivery svg {
+  width: 2rem;
+  margin-right: 1rem;
+}
