--- a/src/web/src/feature/Deliveries/DeliveriesPage.css
+++ b/src/web/src/feature/Deliveries/DeliveriesPage.css
@@ -1,13 +1,27 @@
+.deliveries-container .year-picker {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.year-picker button {
+  margin-right: 1rem;
+}
+
 @media only screen and (max-width: 991px) {
   .deliveries-list {
-    height: 70vh;
+    height: 60vh;
     overflow-y: scroll;
+    margin-bottom: 5rem;
   }
 }
 
 @media only screen and (min-width: 992px) {
   .deliveries-container {
     position: relative;
+  }
+
+  .deliveries-list {    
+    margin-bottom: 2rem;
   }
 
   .deliveries-container .actions-row {
