customer page scrolling

--- a/src/web/src/feature/App.css
+++ b/src/web/src/feature/App.css
@@ -94,6 +94,11 @@ h1 {
   color: white !important;
 }
 
+ .content {
+    overflow-y: scroll;
+    height: 70vh;
+  }
+
 @media only screen and (max-width: 992px) {
   .actions-row {
     border-top: 1px solid rgba(0, 0, 0, 0.125);
