--- a/src/web/src/feature/Customers/CustomerForm.css
+++ b/src/web/src/feature/Customers/CustomerForm.css
@@ -2,6 +2,10 @@
   font-size: 1.5em;
 }
 
+.customer-form .content{
+  padding-right: 1rem;
+}
+
 @media only screen and (max-width: 992px) {
   .customer-form {
     margin-bottom: 2rem;
