--- a/src/web/src/feature/App.css
+++ b/src/web/src/feature/App.css
@@ -119,9 +119,9 @@ h1 {
     width: 100%;
   }
 
-  .content {
+  /* .content {
     margin-bottom: 4rem;
-  }
+  } */
 }
 
 @media only screen and (min-width: 993px) {
