--- a/src/web/src/feature/Customers/List/CustomersPage.css
+++ b/src/web/src/feature/Customers/List/CustomersPage.css
@@ -20,15 +20,15 @@
     position: absolute;
     right: 0;
   }
-  
+
   .customers-page-actions {
     position: relative;
   }
 
-  .customers-page-actions .loader{
+  .customers-page-actions .loader {
     position: absolute;
-    top:0;
-    left:45%
+    top: 0;
+    left: 45%;
   }
 
   .customers-page-actions .actions-row {
@@ -68,5 +68,9 @@
   }
   .button-action-left {
     padding-left: 1rem !important;
+  }
+
+  .search .export {
+    margin-left: 1rem;
   }
 }
