--- a/src/web/src/feature/Deliveries/Board/DeliveriesBoardPage.css
+++ b/src/web/src/feature/Deliveries/Board/DeliveriesBoardPage.css
@@ -19,9 +19,12 @@
   width: 8rem;
 }
 
+.customers-deliveries-list-header {
+  border-radius: 0.25rem 0.25rem 0 0!important;
+}
 
-  .customers-deliveries-list{
-    height: 70vh;
-    overflow-y: scroll;
-  }
-
+.customers-deliveries-list {
+  height: 70vh;
+  overflow-y: scroll;
+  border-radius: 0 0 0.25rem 0.25rem!important;
+}
