added birthdays popup

--- a/src/web/src/feature/App.css
+++ b/src/web/src/feature/App.css
@@ -123,9 +123,9 @@ h1 {
     margin-bottom: 4rem;
   } */
 
-  .export .btn-secondary {
+  /* .export .btn-secondary {
     width: 4rem;
-  }
+  } */
 }
 
 @media only screen and (min-width: 993px) {
